<resources>
    <string name="app_name">CG Task A</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">Add User</string>
    <string name="update_user">Update</string>
    <string name="delete_user">Delete</string>
    <string name="log_in">Login</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="enter_user_name">User Name</string>
    <string name="enter_password">Password</string>
    <string name="enter_first_name">First Name</string>
    <string name="enter_last_name">Last Name</string>
    <string name="enter_email">Email</string>
    <string name="contact_details">Contact Details</string>
    <string name="update_contact_detail">Update Contact Detail</string>
    <string name="add_contact">Add Contact</string>
    <string name="retry">Retry</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_updated_success">User Updated Successfully</string>
    <string name="user_added_success">User Added Successfully</string>
    <string name="user_deleted_success">User Deleted Successfully</string>

    <string name="contact_list">Contacts</string>
    <string name="contact_list_detail">Contacts Detail</string>
    <string name="tap_to_retry">Tap to Retry</string>
    <string name="confirm_delete">Are you sure you want to delete this contact</string>
    <string name="invalid_user_password">Invalid username or password</string>
    <string name="invalid_password_pattern">Password should be 1 upper case, 1 lower case, 1 special character, 1 number</string>D

    <string name="enter_your_firstName">Please enter your first name</string>
    <string name="enter_your_lastName">Please enter your last name</string>
    <string name="enter_your_email">Please enter your email address</string>
    <string name="please_select_image">Please select your image</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="username_should_8_digits">Username should be unto 8 digits</string>
    <string name="enter_your_password">Please enter your password</string>
    <string name="password_should_8_digits">Password should be unto 8 digits</string>


</resources>