<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:elevation="@dimen/dimen_5"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dimen_7"
                        android:src="@drawable/baseline_arrow_back" />

                    <TextView
                        android:id="@+id/toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/dimen_7"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_18_sp" />

                </LinearLayout>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:id="@+id/bottomCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_card_view_height"
            android:layout_margin="@dimen/dimen_20"
            app:cardCornerRadius="@dimen/dimen_15"
            app:cardElevation="@dimen/dimen_9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="@dimen/constraintVertical_bias">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dimen_16">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="@dimen/profile_top_constraintGuide_percent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_firstName"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:hint="@string/enter_first_name"
                    app:endIconCheckable="true"
                    app:endIconDrawable="@drawable/baseline_person_24"
                    app:endIconMode="custom"
                    app:hintTextColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guideline_profile">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_lastName"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:hint="@string/enter_last_name"
                    app:endIconCheckable="true"
                    app:endIconDrawable="@drawable/baseline_person_24"
                    app:endIconMode="custom"
                    app:hintTextColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_firstName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_email"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:hint="@string/enter_email"
                    app:endIconCheckable="true"
                    app:endIconDrawable="@drawable/baseline_mail_24"
                    app:endIconMode="custom"
                    app:hintTextColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_lastName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_profile2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="@dimen/profile_bottom_layout_constraintGuide_percent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_addUpdate"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/submit"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guideline_profile2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/dimen_10"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintBottom_toTopOf="@id/bottomCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/bottomCard">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="@dimen/profile_imageview_width"
                android:layout_height="@dimen/profile_imageview_height"
                android:scaleType="fitXY"
                android:src="@drawable/image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/pb_details"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>